deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/aboutthefit-frontend-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: anchal31sharma/atf-frontend:v1
          name: atf-frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
