deployment/aboutthefit-frontend-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: aboutthefit-frontend-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aboutthefit-frontend-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aboutthefit-frontend-default: "true"
